# usery

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run.py  test_models.py
alembic/: env.py
alembic/versions/: 1660170e4b1a_update_to_async.py  684550666953_initial_migration.py  75640be454e7_initial_migration.py  93983f0a94ad_add_attributes_and_user_attributes_.py  939c5519a827_add_tags_and_user_tags_tables_2.py  99d055ab6fed_update_user_id_to_uuid.py  README.md  add_key_pairs_table.py  d6bac3d18831_add_requires_superuser_flag.py  e6f331e7cd15_add_key_pair_table.py  ea6e955fe391_initial_migration.py  ede46e2d1604_add_tags_and_user_tags_tables.py  oidc_implementation.py  replace_requires_superuser.py
tests/: test_api.py  test_scim.py
usery/: main.py
usery/api/: api.py  deps.py
usery/api/endpoints/: __init__.py  attributes.py  auth.py  avatars.py  clients.py  key_pairs.py  oidc.py  tags.py  user_attributes.py  user_tags.py  users.py
usery/api/schemas/: __init__.py  attribute.py  auth.py  authorization_code.py  avatar.py  batch.py  client.py  consent.py  key_pair.py  refresh_token.py  tag.py  user.py  (+2 more)
usery/config/: settings.py
usery/db/: redis.py  session.py
usery/models/: __init__.py  attribute.py  authorization_code.py  client.py  consent.py  key_pair.py  refresh_token.py  tag.py  user.py  user_attribute.py  user_tag.py
usery/services/: __init__.py  attribute.py  authorization_code.py  client.py  consent.py  key_pair.py  oidc.py  refresh_token.py  security.py  tag.py  user.py  user_attribute.py  user_tag.py
(+6 files in other folders)
